글로벌 OTT 서비스 소스코드/oregon/envrionment/manifests/frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "frontend-ingress"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-oregon-group
 #  alb.ingress.kubernetes.io/group.order: '3'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:214813472555:certificate/dd4cf25c-2891-490a-9e84-9dc981fc1968
    alb.ingress.kubernetes.io/ssl-redirect: '443' 
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "oregon-frontend"
                port:
                  number: 80
